--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.4
-yarn_mappings=1.16.4+build.7
+minecraft_version=1.16.2
+yarn_mappings=1.16.2+build.47
 loader_version=0.10.8
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=1.0
 maven_group=eu.codedsakura
-archives_base_name=fabricTPA
+archives_base_name=FabricTPA
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.25.1+build.416-1.16
+fabric_version=0.26.3+1.16
