--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.2
-yarn_mappings=1.16.2+build.47
+minecraft_version=20w49a
+yarn_mappings=20w49a+build.6
 loader_version=0.10.8
 # Mod Properties
 mod_version=1.1.3
@@ -11,4 +11,4 @@ maven_group=eu.codedsakura
 archives_base_name=FabricTPA
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.26.3+1.16
+fabric_version=0.27.3+1.17
