--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,12 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
+repositories {
+    maven {
+        url = "https://mymavenrepo.com/repo/4ORcMjxPdDAGU4bCTMnc/"
+    }
+}
+
 dependencies {
     //to change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -21,6 +27,8 @@ dependencies {
 
     // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
     // You may need to force-disable transitiveness on them.
+
+    modImplementation(include("us.spaceclouds:FabricTPAFixTitles:0.1.0"))
 }
 
 processResources {
