--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
     maven {
         url = "https://mymavenrepo.com/repo/4ORcMjxPdDAGU4bCTMnc/"
     }
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
 dependencies {
@@ -29,6 +30,7 @@ dependencies {
     // You may need to force-disable transitiveness on them.
 
     modImplementation(include("us.spaceclouds:FabricTPAFixTitles:0.1.2"))
+    modImplementation(include('me.lucko:fabric-permissions-api:0.1-SNAPSHOT'))
 }
 
 processResources {
