--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.9
-loader_version=0.10.8
+minecraft_version=1.17-pre3
+yarn_mappings=1.17-pre3+build.1
+loader_version=0.11.3
 # Mod Properties
-mod_version=2.0.3
+mod_version=3.0.0
 maven_group=eu.codedsakura
 archives_base_name=FabricTPA
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.34.6+1.16
+fabric_version=0.34.8+1.17
