--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17-pre3
-yarn_mappings=1.17-pre3+build.1
-loader_version=0.11.3
+minecraft_version=1.18
+yarn_mappings=1.18+build.1
+loader_version=0.12.6
 # Mod Properties
-mod_version=3.0.1
+mod_version=3.1.0
 maven_group=eu.codedsakura
 archives_base_name=FabricTPA
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.34.8+1.17
+fabric_version=0.43.1+1.18
